employee-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employee-api
spec:
  replicas: 4
  selector:
    matchLabels:
      app: employee-api
  template:
    metadata:
      labels:
        app: employee-api
    spec:
      containers:
        - name: employee-api
          image: pr3mkumar/employee-api:v1
          ports:
            - containerPort: 3000
